@@ -17,12 +17,11 @@ plugins {
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'java'
 apply plugin: "jacoco"
-//apply plugin: "eclipse"
 
 sourceCompatibility = 1.9
 targetCompatibility = 1.9
 
-//ext.moduleName = 'Main'
+//ext.moduleName = 'org.jpo.dataModel'
 
 compileJava {
     options.encoding = "UTF-8"
@@ -56,69 +55,69 @@ repositories {
 def jpoVersion = '0.14'
 
 dependencies {
-    compile 'org.apache.commons:commons-compress:1.18'
-    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
-    compile 'org.apache.commons:commons-jcs-core:2.2.1'
-    compile 'org.apache.commons:commons-jcs-jcache:2.2.1'
-    compile 'org.apache.commons:commons-lang3:3.9'
-    compile 'org.apache.commons:commons-text:1.7'
-    compile 'commons-logging:commons-logging:1.2'
-    compile 'commons-net:commons-net:3.6'
-    compile 'commons-io:commons-io:2.6'
-    compile 'com.google.gdata:core:1.47.1'
+    implementation 'org.apache.commons:commons-compress:1.18'
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    implementation 'org.apache.commons:commons-jcs-core:2.2.1'
+    implementation 'org.apache.commons:commons-jcs-jcache:2.2.1'
+    implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'org.apache.commons:commons-text:1.7'
+    implementation 'commons-logging:commons-logging:1.2'
+    implementation 'commons-net:commons-net:3.6'
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'com.google.gdata:core:1.47.1'
 
-    compile files('libs/gdata-maps-2.0.jar')
-    compile files('libs/gdata-media-1.0.jar')
-    compile files('libs/gdata-photos-2.0.jar')
-    
-    compile 'com.google.guava:guava:28.0-jre'
-    compile 'javax.mail:javax.mail-api:1.6.2'
-    compile 'com.jcraft:jsch:0.1.55'
+    implementation files('libs/gdata-maps-2.0.jar')
+    implementation files('libs/gdata-media-1.0.jar')
+    implementation files('libs/gdata-photos-2.0.jar')
 
-    compile files('libs/jwizz-0.1.4.jar')
-    
-    compile 'org.jxmapviewer:jxmapviewer2:2.4'
-    compile 'com.drewnoakes:metadata-extractor:2.12.0'
+    implementation 'com.google.guava:guava:28.0-jre'
+    implementation 'javax.mail:javax.mail-api:1.6.2'
+    implementation 'com.jcraft:jsch:0.1.55'
 
-    compile 'com.miglayout:miglayout-swing:5.2'
+    implementation files('libs/jwizz-0.1.4.jar')
+
+    implementation 'org.jxmapviewer:jxmapviewer2:2.4'
+    implementation 'com.drewnoakes:metadata-extractor:2.12.0'
+
+    implementation 'com.miglayout:miglayout-swing:5.2'
 
     // needed to pull down 1.1.3p1 from 5 May 2018 from http://www.docking-frames.org/download.html
     // Maven dependencies don't work
-    //compile group: 'org.dockingframes', name: 'docking-frames-core', version: '1.1.2p6a'
-    //compile group: 'org.dockingframes', name: 'docking-frames-common', version: '1.1.2p6a'
-    compile files('libs/docking-frames-common.jar')
-    compile files('libs/docking-frames-core.jar')
+    //implementation group: 'org.dockingframes', name: 'docking-frames-core', version: '1.1.2p6a'
+    //implementation group: 'org.dockingframes', name: 'docking-frames-common', version: '1.1.2p6a'
+    implementation files('libs/docking-frames-common.jar')
+    implementation files('libs/docking-frames-core.jar')
 
-    compile files('libs/TagCloud.jar')
+    implementation files('libs/TagCloud.jar')
     
     //used by Metadata Extractor. Note only 5.x seems to be compatible
-    //compile 'com.adobe.xmp:xmpcore:5.1.3'
-    //compile 'com.adobe.xmp:xmpcore:6.1.10'
-    compile 'org.jetbrains:annotations:17.0.0'
+    //implementation 'com.adobe.xmp:xmpcore:5.1.3'
+    //implementation 'com.adobe.xmp:xmpcore:6.1.10'
+    implementation 'org.jetbrains:annotations:17.0.0'
 
-    compile 'com.twelvemonkeys.imageio:imageio-batik:3.4.2'
-    compile 'org.apache.xmlgraphics:batik-transcoder:1.11'
-    compile 'org.apache.xmlgraphics:batik-anim:1.11'
-    compile 'org.apache.xmlgraphics:batik-rasterizer-ext:1.11'
-    compile 'org.apache.xmlgraphics:batik-extension:1.11'
-    compile 'org.apache.xmlgraphics:xmlgraphics-commons:2.3'
-    compile 'org.apache.xmlgraphics:batik-svggen:1.11'
-    compile 'com.twelvemonkeys.imageio:imageio-bmp:3.4.2'
-    //compile 'com.twelvemonkeys.imageio:imageio-clippath:3.4.1' //OK -- But what does it do?
-    compile 'com.twelvemonkeys.imageio:imageio-icns:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-iff:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-jpeg:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-hdr:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-pcx:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-pdf:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-pict:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-pnm:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-psd:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-sgi:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-tiff:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-tga:3.4.2'
-    compile 'com.twelvemonkeys.imageio:imageio-thumbsdb:3.4.2'
-    testCompile "junit:junit:4.13-beta-3"
+    implementation 'com.twelvemonkeys.imageio:imageio-batik:3.4.2'
+    implementation 'org.apache.xmlgraphics:batik-transcoder:1.11'
+    implementation 'org.apache.xmlgraphics:batik-anim:1.11'
+    implementation 'org.apache.xmlgraphics:batik-rasterizer-ext:1.11'
+    implementation 'org.apache.xmlgraphics:batik-extension:1.11'
+    implementation 'org.apache.xmlgraphics:xmlgraphics-commons:2.3'
+    implementation 'org.apache.xmlgraphics:batik-svggen:1.11'
+    implementation 'com.twelvemonkeys.imageio:imageio-bmp:3.4.2'
+    //implementation 'com.twelvemonkeys.imageio:imageio-clippath:3.4.1' //OK -- But what does it do?
+    implementation 'com.twelvemonkeys.imageio:imageio-icns:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-iff:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-hdr:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-pcx:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-pdf:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-pict:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-pnm:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-psd:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-sgi:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-tiff:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-tga:3.4.2'
+    implementation 'com.twelvemonkeys.imageio:imageio-thumbsdb:3.4.2'
+    testImplementation "junit:junit:4.13-beta-3"
 }
 
 
@@ -171,6 +170,16 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        jvmArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'ALL-MODULE-PATH',
+//                '--add-reads', "$moduleName=junit",
+//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+//        ]
+//        classpath = files()
+//    }
 }
 
 jar {
